--- a/src/app-frontend/src/views/Home/Home.css
+++ b/src/app-frontend/src/views/Home/Home.css
@@ -1,9 +1,16 @@
 .home {
   display: flex;
   flex-direction: row;
+  min-width: 1000px;
 }
 
 .home-content {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  align-self: center;
 }
