--- a/src/app-frontend/src/components/TransactionItem/TransactionItem.css
+++ b/src/app-frontend/src/components/TransactionItem/TransactionItem.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   border-bottom: 1px solid #e0e0e0;
   width: calc(100% - 40px);
-  height: 40px;
+  height: 70px;
   align-items: center;
   padding: 0 20px;
 }
@@ -20,4 +20,25 @@
 .positive-transaction {
   color: #72c47c;
   font-weight: 500;
+}
+
+.transaction-icon {
+  width: 100px;
+}
+
+.transaction-item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1;
+}
+
+.transaction-description {
+  font-size: 12px;
+  color: #666;
+}
+
+.transaction-type {
+  font-size: 12px;
+  font-weight: bold;
 }
