--- a/src/app-frontend/src/components/TransactionList/TransactionList.css
+++ b/src/app-frontend/src/components/TransactionList/TransactionList.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: calc(100% - 10px);
+  width: 100%;
   outline: 1px solid #18003371;
   height: fit-content;
   border-radius: 10px;
