--- a/src/app-frontend/src/components/TransactionItem/TransactionItem.css
+++ b/src/app-frontend/src/components/TransactionItem/TransactionItem.css
@@ -1,4 +1,4 @@
-.transaction-item {
+.transaction-item.loading {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #e0e0e0;
@@ -6,39 +6,43 @@
   height: 70px;
   align-items: center;
   padding: 0 20px;
+  animation: pulse 1.5s ease-in-out infinite;
 }
 
-.transaction-item:first-child {
-  padding-top: 0;
+.transaction-icon-placeholder {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ccc;
 }
 
-.transaction-item:last-child {
-  border-bottom: none;
-  padding-bottom: 0;
+.transaction-info-placeholder {
+  width: 200px;
+  height: 16px;
+  background-color: #e0e0e0;
+  border-radius: 10px;
+  margin-bottom: 5px;
 }
 
-.positive-transaction {
-  color: #72c47c;
-  font-weight: 500;
+.transaction-description-placeholder {
+  width: 150px;
+  height: 14px;
+  background-color: #e0e0e0;
+  border-radius: 10px;
 }
 
-.transaction-icon {
-  width: 100px;
+.transaction-amount-placeholder {
+  width: 80px;
+  height: 20px;
+  background-color: #e0e0e0;
+  border-radius: 10px;
 }
 
-.transaction-item-info {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex: 1;
-}
-
-.transaction-description {
-  font-size: 12px;
-  color: #666;
-}
-
-.transaction-type {
-  font-size: 12px;
-  font-weight: bold;
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
 }
