--- a/src/app-frontend/src/components/Balance/Balance.css
+++ b/src/app-frontend/src/components/Balance/Balance.css
@@ -1,3 +1,20 @@
+.balance {
+  outline: 1px solid #18003371;
+  padding: 20px 30px;
+  border-radius: 10px;
+  width: fit-content;
+  min-width: 175px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.balance-amount {
+  margin-top: 10px;
+}
+
 .balance.loading {
   outline: 1px solid #18003371;
   padding: 20px 30px;
