--- a/src/app-frontend/src/components/TransactionItem/TransactionItem.css
+++ b/src/app-frontend/src/components/TransactionItem/TransactionItem.css
@@ -1,3 +1,48 @@
+.transaction-item {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #e0e0e0;
+  width: calc(100% - 40px);
+  height: 70px;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.transaction-item:first-child {
+  padding-top: 0;
+}
+
+.transaction-item:last-child {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+
+.positive-transaction {
+  color: #72c47c;
+  font-weight: 500;
+}
+
+.transaction-icon {
+  width: 100px;
+}
+
+.transaction-item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1;
+}
+
+.transaction-description {
+  font-size: 12px;
+  color: #666;
+}
+
+.transaction-type {
+  font-size: 12px;
+  font-weight: bold;
+}
+
 .transaction-item.loading {
   display: flex;
   justify-content: space-between;
