--- a/src/app-frontend/src/views/Send/Send.css
+++ b/src/app-frontend/src/views/Send/Send.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 160px);
+  height: calc(100vh - 140px);
   width: 100%;
 }
 
@@ -11,6 +11,13 @@
   flex-direction: column;
   gap: 20px;
   width: 50%;
+  flex: 1;
+}
+
+.send-title {
+  font-size: 38px;
+  font-weight: 200;
+  margin-bottom: 50px;
 }
 
 .amount-section, .to-section, .message-section, .send-section {
