--- a/src/app-frontend/src/components/ExchangeRateList/ExchangeRateList.css
+++ b/src/app-frontend/src/components/ExchangeRateList/ExchangeRateList.css
@@ -1,4 +1,10 @@
+.exchange-rate-section {
+  margin-top: 30px;
+}
+
 .exchange-rate-list {
   display: flex;
   gap: 10px;
+  flex-wrap: nowrap;
+  overflow: auto;
 }
