--- a/src/app-frontend/src/views/Home/Home.css
+++ b/src/app-frontend/src/views/Home/Home.css
@@ -11,6 +11,22 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 50px;
+
+  /* background: linear-gradient(135deg, rgba(240, 200, 214, 0.8), rgba(211, 187, 240, 0.734), rgba(143, 204, 232, 0.8)); */
+  background: url('/public/background.png') no-repeat center center fixed;
+  /* background: linear-gradient(to top left, transparent, #f0c8d6cc),
+              linear-gradient(to top right, transparent, #f8749b),
+              linear-gradient(to bottom right, transparent, #7d88d8),
+              linear-gradient(to bottom left, transparent, #87d3ff); */
+
+  /* background: linear-gradient(45deg, rgba(255, 175, 189, 0.8), rgba(255, 195, 160, 0.8), rgba(255, 233, 173, 0.8), rgba(202, 240, 248, 0.8), rgba(160, 196, 255, 0.8)); */
+  /* background: linear-gradient(60deg, rgba(204, 169, 244, 0.8), rgba(169, 180, 247, 0.8), rgba(133, 207, 237, 0.8), rgba(133, 247, 201, 0.8)); */
+  /* background: linear-gradient(135deg, rgba(254, 109, 142, 0.8), rgba(255, 144, 104, 0.8), rgba(255, 202, 113, 0.8)); */
+  /* background: linear-gradient(90deg, rgba(98, 39, 116, 0.8), rgba(197, 51, 100, 0.8), rgba(255, 175, 123, 0.8)); */
+  /* background: linear-gradient(120deg, rgba(240, 47, 194, 0.8), rgba(21, 153, 207, 0.8), rgba(253, 200, 48, 0.8)); */
+
+
+  background-size: cover;
 }
 
 .content-wrapper {
