--- a/src/app-frontend/src/components/Balance/Balance.css
+++ b/src/app-frontend/src/components/Balance/Balance.css
@@ -1,5 +1,5 @@
 .balance {
-  outline: 1px solid #18003371;
+  /* outline: 1px solid #18003371; */
   padding: 20px 30px;
   border-radius: 10px;
   width: fit-content;
@@ -8,7 +8,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  user-select: none;
   cursor: pointer;
+
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+}
+
+.balance:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .balance-amount {
