--- a/src/app-frontend/src/components/ExchangeRate/ExchangeRate.css
+++ b/src/app-frontend/src/components/ExchangeRate/ExchangeRate.css
@@ -1,5 +1,4 @@
 .exchange-rate {
-  outline: 1px solid #18003371;
   padding: 20px 30px;
   border-radius: 10px;
   display: flex;
@@ -9,6 +8,17 @@
   cursor: pointer;
   width: fit-content;
   margin: 10px 1px;
+
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+}
+
+.exchange-rate:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .exchange-rate-amount {
