--- a/src/app-frontend/src/components/TransactionList/TransactionList.css
+++ b/src/app-frontend/src/components/TransactionList/TransactionList.css
@@ -7,12 +7,18 @@
 }
 
 .transaction-list {
-  background-color: #f8f8fa;
+  /* background-color: #f8f8fa; */
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  outline: 1px solid #18003371;
+  /* outline: 1px solid #18003371; */
   height: fit-content;
   border-radius: 10px;
+
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
 }
